force-app/main/default/objects/BillingEntity__c/BillingEntity__c.object-meta.xml
<CustomObject>
    <description>Entité juridique émettrice des devis et factures.</description>
    <label>Entité de facturation</label>
    <nameField>
        <label>Raison sociale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités de facturation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>