force-app/main/default/objects/BillingEntity__c/fields/Address__c.field-meta.xml
<CustomField><fullName>Address__c</fullName><label>Adresse</label><required>true</required><type>TextArea</type></CustomField>