force-app/main/default/objects/BillingEntity__c/fields/DefaultPaymentTermsDays__c.field-meta.xml
<CustomField><fullName>DefaultPaymentTermsDays__c</fullName><defaultValue>30</defaultValue><label>Délai de paiement par défaut</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>