force-app/main/default/objects/BillingEntity__c/fields/EarlyPaymentTerms__c.field-meta.xml
<CustomField><fullName>EarlyPaymentTerms__c</fullName><defaultValue>&quot;Pas d’escompte pour paiement anticipé.&quot;</defaultValue><label>Conditions d’escompte</label><required>false</required><type>TextArea</type></CustomField>