force-app/main/default/objects/BillingEntity__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><label>Email</label><required>false</required><type>Email</type></CustomField>