force-app/main/default/objects/BillingEntity__c/fields/IsDefault__c.field-meta.xml
<CustomField><fullName>IsDefault__c</fullName><defaultValue>false</defaultValue><label>Entité par défaut</label><type>Checkbox</type></CustomField>