force-app/main/default/objects/BillingEntity__c/fields/LatePaymentPenaltyText__c.field-meta.xml
<CustomField><fullName>LatePaymentPenaltyText__c</fullName><defaultValue>&quot;Pénalités de retard exigibles au taux légal applicable dès le lendemain de l’échéance.&quot;</defaultValue><label>Pénalités de retard</label><required>false</required><type>TextArea</type></CustomField>