force-app/main/default/objects/BillingEntity__c/fields/LegalForm__c.field-meta.xml
<CustomField><fullName>LegalForm__c</fullName><label>Forme juridique</label><length>80</length><required>false</required><type>Text</type></CustomField>