force-app/main/default/objects/BillingEntity__c/fields/LogoContentDocumentId__c.field-meta.xml
<CustomField><fullName>LogoContentDocumentId__c</fullName><label>Logo PDF (ID fichier)</label><length>18</length><required>false</required><type>Text</type></CustomField>