force-app/main/default/objects/BillingEntity__c/fields/PaymentInstructions__c.field-meta.xml
<CustomField><fullName>PaymentInstructions__c</fullName><label>Instructions de paiement</label><required>false</required><type>TextArea</type></CustomField>