force-app/main/default/objects/BillingEntity__c/fields/PdfPrimaryColor__c.field-meta.xml
<CustomField><fullName>PdfPrimaryColor__c</fullName><defaultValue>&quot;#0B5CAB&quot;</defaultValue><description>Couleur principale du PDF au format hexadécimal #RRGGBB.</description><label>Couleur principale PDF</label><length>7</length><required>false</required><type>Text</type></CustomField>