force-app/main/default/objects/BillingEntity__c/fields/RcsCity__c.field-meta.xml
<CustomField><fullName>RcsCity__c</fullName><label>Ville RCS</label><length>80</length><required>false</required><type>Text</type></CustomField>