force-app/main/default/objects/BillingEntity__c/fields/RecoveryFeeAmount__c.field-meta.xml
<CustomField><fullName>RecoveryFeeAmount__c</fullName><defaultValue>40</defaultValue><label>Indemnité de recouvrement</label><precision>16</precision><required>false</required><scale>2</scale><type>Currency</type></CustomField>