force-app/main/default/objects/BillingEntity__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField><fullName>RegistrationNumber__c</fullName><label>SIREN</label><length>20</length><required>true</required><type>Text</type></CustomField>