force-app/main/default/objects/BillingEntity__c/fields/ShareCapital__c.field-meta.xml
<CustomField><fullName>ShareCapital__c</fullName><label>Capital social</label><precision>16</precision><required>false</required><scale>2</scale><type>Currency</type></CustomField>