force-app/main/default/objects/BillingEntity__c/fields/Siret__c.field-meta.xml
<CustomField><fullName>Siret__c</fullName><label>SIRET</label><length>14</length><required>false</required><type>Text</type></CustomField>