force-app/main/default/objects/BillingEntity__c/fields/VatNumber__c.field-meta.xml
<CustomField><fullName>VatNumber__c</fullName><label>Numéro de TVA</label><length>40</length><required>false</required><type>Text</type></CustomField>