force-app/main/default/objects/BillingEntity__c/validationRules/PdfPrimaryColorFormat.validationRule-meta.xml
<ValidationRule><fullName>PdfPrimaryColorFormat</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(PdfPrimaryColor__c)), NOT(REGEX(PdfPrimaryColor__c, &quot;^#[0-9A-Fa-f]{6}$&quot;)))</errorConditionFormula><errorDisplayField>PdfPrimaryColor__c</errorDisplayField><errorMessage>Utilisez une couleur hexadécimale au format #RRGGBB.</errorMessage></ValidationRule>