force-app/main/default/objects/BillingEntity__c/validationRules/SiretFormat.validationRule-meta.xml
<ValidationRule><fullName>SiretFormat</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Siret__c)), NOT(REGEX(Siret__c, &quot;^[0-9]{14}$&quot;)))</errorConditionFormula><errorDisplayField>Siret__c</errorDisplayField><errorMessage>Le SIRET doit contenir exactement 14 chiffres.</errorMessage></ValidationRule>